name:                doom
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/doom#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable doom
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , text
                     , mtl
                     , transformers
                     , microlens-platform
                     , microlens
